9.10/converter-service.yml
apiVersion: v1
kind: Service
metadata:
  name: converter-cluster-ip
spec:
  type: ClusterIP
  ports:
    - port: 3002
      protocol: TCP
  selector:
    components: converter
