9.10/rmq-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rmq-cluster-ip
spec:
  type: ClusterIP
  ports:
    - port: 5672
      protocol: TCP
  selector:
    components: rmq
